--- a/doc/TODO
+++ b/doc/TODO
@@ -25,10 +25,12 @@ BOARD:
   - liquid tags:
     x locale switcher
     x nav
-    - link_to (new)
-    (- others ?)    -
+    (- link_to (new)
+    - others ?)    -
   - other problems to solve:
     x If you create a new page it shall always be created in the default_language, not depending on the used language in the backend.
+    - set the page slug for all the site locales
+    - default site locale even if the i18n feature is disabled (the disable procedure is missing btw)
     - redirect for the default site locale if urls like /<default_site_locale>/....
     - inline editing
 
