many to many and so on

--- a/config/locales/admin_ui.fr.yml
+++ b/config/locales/admin_ui.fr.yml
@@ -59,6 +59,10 @@ fr:
         update: Mettre à jour
         send: Envoyer
         disable_with: En cours...
+      form:
+        change_file: Changer
+        delete_file: Supprimer
+        cancel: Annuler
 
     notifications:
       new_content_entry:
