content entry type in template name

--- a/config/locales/admin_ui.en.yml
+++ b/config/locales/admin_ui.en.yml
@@ -311,3 +311,7 @@ en:
             back: Return to back-office
             confirm: Confirm
             cancel: Cancel
+        templates:
+          links:
+            back: '↩ Retour'
+            new: '+ Nouveau'
